--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "video player?",
   "main": "index.js",
   "scripts": {
-    "start": "live-server",
+    "start": "parcel index.html notes/index.html notes/**/*.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/merRen22/js-video#readme",
   "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+    "parcel-bundler": "^1.12.5",
+    "typescript": "^4.5.2"
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
