--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   },
   "browserslist": [
     "last 1 Chrome version"
-  ]
+  ],
+  "dependencies": {
+    "@mer_ren22/jsmediaplayer": "^1.0.0"
+  }
 }
